# SubtractChannels

./: CMakeLists.txt  chip.cpp  chip.h  imageManager.cpp  imageManager.h  mainwindow.cpp  mainwindow.h  view.cpp  view.h
